# Utils

./: .editorconfig  .gitignore  CMakeLists.txt  Histogram.cpp  Histogram.h  LICENSE  Math.hpp  README.md  Rate.cpp  Rate.h  Rate.hpp  test.cpp  test_rate.cpp
.github/workflows/: main.yml
src/: Histogram.cpp  Histogram.hpp  Math.hpp  Rate.cpp  Rate.hpp  Statistics.hpp
test/: test_histogram.cpp  test_math.cpp  test_rate.cpp
tests/: CMakeLists.txt  test_histogram.cpp  test_math.cpp  test_rate.cpp  test_statistics.cc
